<?php

declare(strict_types=1);

namespace MicroHis\Domain\Exceptions;

use RuntimeException;

final class DomainException extends RuntimeException
{
}
